Basic setup before CSS Styling

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <a href="index.html">Reisu's Blog</a>
         <ul>
           <li><a href="about.html"></a></li>
-          <li><a href="contact.html"></a></li>
+          <li><a href="mailto:reisu@reisugames.com"></a></li>
         </ul>
       </div>
     </div>
