--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Reisu's Blog</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
 
     <div id="header">
       <div class="container">
-        <a href="index.html">Reisu's Blog</a>
-        <ul>
+        <a id="header-title" href="index.html">Reisu's Blog</a>
+        <ul id="header-nav">
           <li><a href="about.html"></a></li>
           <li><a href="mailto:reisu@reisugames.com"></a></li>
         </ul>
