--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a id="header-title" href="index.html">Reisu's Blog</a>
         <ul id="header-nav">
           <li><a href="about.html">About</a></li>
-          <li><a href="mailto:reisu@reisugames.com">Contact</a></li>
+          <li><a href="mailto:reisuj@gmail.com">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -53,10 +53,8 @@
         <div class="column">
           <h4>My Links</h4>
           <p>
-            <a href="https://www.linkedin.com/in/brian-branch/">LinkedIn</a>
-            <br>
-            <a href="http://reisugames.com/">ReisuGames</a>
-            </p>
+            <a href="https://www.linkedin.com/in/brian-branch/">LinkedIn</a>            
+          </p>
         </div>
         <div class="column">
           <h4>My Story</h4>
